use filters on the had  select count

--- a/boss/index.html
+++ b/boss/index.html
@@ -7,8 +7,6 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-    <script>
-      console.log("欢迎加入->%c https://github.com/SimpleRoom", "color:purple");
-    </script>
+    <script>console.log("欢迎加入->%c https://github.com/SimpleRoom", "color:purple");</script>
   </body>
 </html>
